--- a/index.css
+++ b/index.css
@@ -1,6 +1,47 @@
+*,
+*::before,
+*::after {
+    box-sizing: border-box;
+}
+
 html, 
 body {
     margin: 0;
     padding: 0;
     font-family: "Roboto", sans-serif;
+}
+
+/* Typography */
+
+nav {
+    font-size: 0.75rem;
+}
+
+/* Nav */ 
+
+nav ul {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 0.188em;
+    list-style-type: none;
+    height: 3.688em;
+    padding-left: 1.25em;
+}
+
+nav li:nth-child(2) {
+    font-weight: bold;
+}
+
+nav li:nth-last-child(2),
+nav li:last-child {
+    margin-left: auto;
+}
+
+nav li:last-child {
+    padding-right: 1.25em;
+}
+
+nav img {
+    width: 1.438em;
 }
