Style hero section
Added flex containers section in CSS.

Styled and adjusted layout of hero section.

--- a/index.css
+++ b/index.css
@@ -15,6 +15,16 @@ body {
 
 h1 {
     text-transform: capitalize;
+    margin: 0;
+}
+
+/* Flex Containers */
+
+.hero {
+    display: flex;
+    flex-direction: column;
+    padding-left: 1.25em;
+    padding-right: 1.25em;
 }
 
 /* Nav */ 
@@ -49,8 +59,18 @@ nav img {
 }
 
 .hero {
+    padding-top: 5.438em;
     color: white;
     min-height: 293px;
     background: url("/images/article-image-hero.jpg");
     background-size: cover;
+}
+
+.hero > time {
+    font-size: 0.75rem;
+    margin-bottom: 0.5em;
+}
+
+.hero > p {
+    line-height: 1.5;
 }
