Enhance hero section readability
Enhanced the hero section background using the `background-blend-mode` CSS property. This change increases text readability and ensures compliance with WCAG (Web Content Accessibility Guidelines) for better accessibility.

--- a/index.css
+++ b/index.css
@@ -62,7 +62,9 @@ nav img {
     padding-top: 5.438em;
     color: white;
     min-height: 293px;
-    background: url("/images/article-image-hero.jpg");
+    background-color: #888;
+    background-blend-mode: multiply;
+    background-image: url("/images/article-image-hero.jpg");
     background-size: cover;
 }
 
