Style footer section

--- a/index.css
+++ b/index.css
@@ -118,6 +118,24 @@ main > a.view-more {
     margin-bottom: 2.688em;
 }
 
+/* Footer */
+
+footer > h2,
+footer > p {
+    font-size: 0.75rem;
+}
+
+footer > p {
+    color: #D7D7D7;
+}
+
+footer {
+    color: #ECECEC;
+    padding: 2.313em 0;
+    text-align: center;
+    background-color: #202020;
+}
+
 /* Utility */
 
 .m0 {
