Remove underline from header links

--- a/index.css
+++ b/index.css
@@ -28,6 +28,10 @@ p {
     line-height: 1.5;
 }
 
+a {
+    color: #000000;
+}
+
 time {
     font-size: 0.875rem;
 }
@@ -71,6 +75,10 @@ nav li {
 nav img {
     width: 1.438em;
     height: 1.438em;
+}
+
+nav a {
+    text-decoration: none;
 }
 
 /* Hero */
