--- a/index.css
+++ b/index.css
@@ -9,6 +9,7 @@ body {
     margin: 0;
     padding: 0;
     font-family: "Roboto", sans-serif;
+    min-height: 100vh;
 }
 
 /* Typography */
@@ -100,21 +101,20 @@ nav a {
 
 /* Blogs */
 
-section > article.blog {
-    padding: 1.25em;
+section.blog {
     gap: 0.563em;
 }
 
-article.blog > img {
-    width: 100%;
-    margin: 0 auto;
-    display: block;
+.blog-text {
+    display: flex;
+    flex-direction: column;
+    gap: 0.563em;
 }
 
-article.blog > time {
+div.blog-text > time {
     display: block;
     text-transform: uppercase;
-    margin-top: 0.6em;
+    margin-top: 1.2em;
 }
 
 main > div.view-more-section {
@@ -123,6 +123,14 @@ main > div.view-more-section {
     margin-top: 1em;
     margin-bottom: 2.688em;
     text-align: center;
+}
+
+div.blog-container > img {
+    width: 100%;
+}
+
+.blog {
+    padding: 1em;
 }
 
 /* Footer */
@@ -147,4 +155,20 @@ footer {
 
 .m0 {
     margin: 0;
+}
+
+/* Media Queries */
+
+@media (min-width: 620px) {
+    
+    section.blog {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        gap: 1em;
+    }
+
+    section.blog > article {
+        flex: 1 300px;
+    }   
 }
