Add media query at 850px
- Added a media query targeting devices with a width of 850px or more

--- a/index.css
+++ b/index.css
@@ -170,3 +170,14 @@ footer {
         padding: 1.75em;
     }
 }
+
+@media (min-width: 850px) {
+    section.hero,
+    section.blog {
+        padding: 2.75em;
+    }
+
+    section.blog {
+        gap: 1.75em;
+    }
+}
