--- a/index.css
+++ b/index.css
@@ -9,7 +9,16 @@ body {
     margin: 0;
     padding: 0;
     font-family: "Roboto", sans-serif;
-    min-height: 100vh;
+    min-height: 100%;
+}
+
+body {
+    display: flex;
+    flex-direction: column;
+}
+
+main {
+    flex: 1 0 auto;
 }
 
 /* Typography */
@@ -141,6 +150,11 @@ div.blog-container > img {
 
 /* Footer */
 
+footer {
+    flex-shrink: 0;
+    width: 100%;
+}
+
 footer > h2,
 footer > p {
     font-size: 0.75rem;
@@ -179,7 +193,7 @@ footer {
 
 @media (min-width: 850px) {
 
-    body {
+    main {
         max-width: 1080px;
         margin: 0 auto;
     }
