--- a/index.css
+++ b/index.css
@@ -6,6 +6,7 @@
 
 html, 
 body {
+    background-color: #fcfcfc;
     margin: 0;
     padding: 0;
     font-family: "Roboto", sans-serif;
@@ -46,7 +47,7 @@ time {
 
 /* Links */
 a {  
-    color: #000000;
+    color: #1C1C1C;
 }
 
 a:hover {
@@ -110,7 +111,7 @@ nav a {
     flex-direction: column;
     justify-content: end;
     padding-top: 5.438em;
-    color: white;
+    color: #FCFCFC;
     min-height: 293px;
     background-color: #888;
     background-blend-mode: multiply;
@@ -151,7 +152,7 @@ div.blog-text > time {
 
 main > div.view-more-section {
     font-weight: 700;
-    color: #000000;
+    color: #1C1C1C;
     margin-top: 1em;
     margin-bottom: 2.688em;
     text-align: center;
