--- a/index.css
+++ b/index.css
@@ -62,6 +62,11 @@ a:focus {
     color: #555;
 }
 
+a.img-link:hover,
+a.img-link:focus {
+    opacity: 0.85;
+}
+
 /* Flex Containers */
 
 section.hero,
@@ -134,8 +139,15 @@ section.blog {
 }
 
 section.blog > article {
-    flex-grow: 1;
+    display: flex;
     flex-basis: 300px;
+    flex-grow: 1;
+}
+
+a img {
+    margin: 0;
+    padding: 0;
+    display: block;
 }
 
 .blog-text {
@@ -158,7 +170,7 @@ main > div.view-more-section {
     text-align: center;
 }
 
-div.blog-container > img {
+div.blog-container > a > img {
     width: 100%;
 }
 
