--- a/styles/global.css
+++ b/styles/global.css
@@ -50,6 +50,7 @@ a:focus {
 a.img-link:hover,
 a.img-link:focus {
     opacity: 0.85;
+    z-index: 1;
 }
 
 /* Flex Containers */
@@ -76,8 +77,9 @@ nav ul {
 }
 
 nav {
-    background-color: #ECECEC;
+    z-index: 1;
     justify-content: space-between;
+    background-color: #ECECEC;
     position: fixed;
     width: 100%;
     font-size: 0.75rem;
