Apply uppercase style to time tag
- Added the `text-transform: uppercase;` property to the `time` tags in the `global.css` file to ensure it is applied across every web page.

--- a/styles/global.css
+++ b/styles/global.css
@@ -33,6 +33,10 @@ p {
     line-height: 1.5;
 }
 
+time {
+    text-transform: uppercase;
+}
+
 /* Links */
 
 a {  
@@ -137,7 +141,6 @@ a img {
 
 div.blog-text > time {
     display: block;
-    text-transform: uppercase;
     margin-top: 1.2em;
 }
 
