--- a/styles/about-me.css
+++ b/styles/about-me.css
@@ -1,1 +1,18 @@
 /* about-me CSS */
+
+section.hero {
+    flex-direction: column;
+}
+
+h1 {
+    font-size: 2.125rem;
+}
+
+section.hero > h2 {
+    font-size: 1rem;
+    font-weight: 400;
+}
+
+section.hero > img {
+    margin-block: -5em;
+}
