--- a/styles/about-me.css
+++ b/styles/about-me.css
@@ -1,18 +1,22 @@
-/* about-me CSS */
+/* Hero */
 
 section.hero {
     flex-direction: column;
 }
 
-h1 {
+section.hero > h1 {
     font-size: 2.125rem;
 }
 
 section.hero > h2 {
     font-size: 1rem;
-    font-weight: 400;
 }
 
 section.hero > img {
     margin-block: -5em;
+}
+
+h3 {
+    font-size: 1rem;
+    margin-top: 0;
 }
