Fix main blog image render
Resolved an issue where the main blog hero image displayed on all web pages when the screen width was 620px or more.

--- a/styles/index.css
+++ b/styles/index.css
@@ -38,3 +38,12 @@ time {
     margin-bottom: 0.5em;
 }
 
+/* Media Queries */
+
+@media (min-width: 620px) {
+
+    section.hero {
+        background-image: url("/images/article-image-hero-large.jpg");
+        min-height: 391px;
+    }
+}
