--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -80,8 +80,7 @@ div.home-blog-text > time {
 main > div.home-view-more-section {
     font-weight: 700;
     color: #1C1C1C;
-    margin-top: 1em;
-    margin-bottom: 2.688em;
+    margin-block: 1em;
     text-align: center;
 }
 
