--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -80,7 +80,8 @@ div.home-blog-text > time {
 main > div.home-view-more-section {
     font-weight: 700;
     color: #1C1C1C;
-    margin-block: 1em;
+    margin-top: 1em;
+    margin-bottom: 2.688em;
     text-align: center;
 }
 
@@ -109,6 +110,9 @@ div.home-blog-container > a > img {
     section.home-hero > p {
         width: 70%;
     }
+    main > div.home-view-more-section {
+        margin-bottom: 2em;
+    }
 }
 
 @media (min-width: 850px) {
@@ -134,6 +138,10 @@ div.home-blog-container > a > img {
 
     section.home-hero {
         min-height: 488px;
+    }
+
+    main > div.home-view-more-section {
+        margin-bottom: 1em;
     }
 }
 
