--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -77,12 +77,24 @@ div.home-blog-text > time {
     margin-top: 1.2em;
 }
 
-main > div.home-view-more-section {
+button.view-more-btn {
+    display: block;
+    width: auto;
+    margin-inline: auto;
+    align-items: center;
+    font-size: 1rem;
     font-weight: 700;
     color: #1C1C1C;
+    text-decoration: underline;
     margin-top: 1em;
     margin-bottom: 2.688em;
-    text-align: center;
+    border: 2px solid red;
+    background-color: inherit;
+    border: none;
+}
+
+button.view-more-btn:hover {
+    color: #555;
 }
 
 div.home-blog-container > a > img {
@@ -110,7 +122,7 @@ div.home-blog-container > a > img {
     section.home-hero > p {
         width: 70%;
     }
-    main > div.home-view-more-section {
+    button.view-more-btn {
         margin-bottom: 2em;
     }
 }
@@ -140,7 +152,7 @@ div.home-blog-container > a > img {
         min-height: 488px;
     }
 
-    main > div.home-view-more-section {
+    button.view-more-btn {
         margin-bottom: 1em;
     }
 }
