--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -6,22 +6,31 @@ header {
 }
   
 nav,
-nav > div.container,
-nav ul {
+nav > div.container {
   display: flex;
-  align-items: center;
   gap: 0.188em;
 }
+
+nav > div.container {
+  margin-left: 1em;
+  align-items: center;
   
+}
+
+nav > div.menu-container {
+  margin-right: 0;
+}
+
 nav {
+  display: flex;
+  gap: 1em;
   z-index: 1;
-  justify-content: space-between;
   background-color: #ECECEC;
   position: fixed;
-  width: 100%;
+  width: 100vw;
   font-size: 0.75rem;
   font-weight: bold;
-  padding: 0 1.25em;
+  padding-block: 1em;
 }
   
 nav ul {
